_archive/apimanager-service.yml
## This service entry opens up ports for DataPower APIGateway (which is within the istiomesh)
## to connect to the APIManager service (which is outside of the Istio mesh)

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: apim
spec:
  hosts:
  - api.$kubevm
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apim
spec:
  hosts:
  - mgmt.$kubevm
  tls:
  - match:
    - port: 443
      sni_hosts:
      - mgmt.$kubevm
    route:
    - destination:
        host: mgmt.$kubevm
        port:
          number: 443
      weight: 100
